2004-11-29  Pavel Tsekov  <ptsekov@gmx.net>

	* main.c (midnight_callback): Make the the keystrokes the invoke
	select_cmd(), unselect_cmd() and reverse_selection_cmd () work
	even if the command prompt is turned off.

	This bug was reported by Alex Yosifov.

2004-11-26  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* execute.c (shell_execute): Optimize memory usage.
	* ext.c (regex_check_type): Likewise.

2004-11-02  Pavel Tsekov  <ptsekov@gmx.net>

	* help.c (help_event): Fix offset of event area for mouse click.

2004-11-19  Roland Illig  <roland.illig@gmx.de>

	* Makefile.am: Excluded pipethough.3 from the distribution
	as it is currently unused.

2004-11-18  Pavel Shirshov  <me@pavelsh.pp.ru>

	* user.c (execute_menu_command): Revert last changes. Execute
	shell_execute() with flag EXECUTE_HIDE to prevent recording
	in ~/.bash_history.
	* execute.h: Add EXECUTE_HIDE flag. It's used to prefix the command
	with a space.
	* execute.c (shell_execute): Prefix the command with a space, if define
	EXECUTE_HIDE flag.

2004-11-17  Roland Illig  <roland.illig@gmx.de>

	* screen.c (do_search): Ignore the backspace key on empty
	quick-search.

	From Egmont Koblinger <egmont * uhulinux hu>

2004-11-15  Leonard den Ottolander  <leonard * den ottolander nl>

	* file.c: Code cleanup (mostly indentation).
	* user.c (execute_menu_command): Prefix the command with a space
	to prevent recording in ~/.bash_history.

2004-11-12  Pavel Shirshov  <me@pavelsh.pp.ru>

	* user.c (expand_format): Return % with followed character if it
	without special meaning.

2004-11-11  Roland Illig  <roland.illig@gmx.de>

	* popthelp.c (showHelpIntro): The basename of argv[0] starts after
	the last slash in argv[0], not after the first.

	From Egmont Koblinger <egmont * uhulinux hu>

2004-11-10  Roland Illig  <roland.illig@gmx.de>

	* Makefile.am: Excluded pipethough.{c,h} from the distribution
	as they are currently unused.

2004-11-10  Andrew V. Samoilov  <sav@bcs.zp.ua>
